--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,12 +44,17 @@
   * {
     @apply m-0 p-0 box-border;
   }
+  
 
   body {
     @apply bg-background text-foreground;
   }
 }
 
+
+body::-webkit-scrollbar {
+  display: none;
+}
 
 
 @keyframes cloudMove1 {
